Correction du makefile pour qu'il fonctionne

--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,6 @@
-CC=-gcc
+CC=gcc
 CFLAGS=-Wall -g
-EXEC=tests_untaires_date
+EXEC=tests_unitaires_date
 
 
 all: $(EXEC)
@@ -8,17 +8,17 @@ all: $(EXEC)
 
 # Compilation
 
-date.o: date.c
+date.o: date.c date.h
 	$(CC) $(CFLAGS) -c $< -o $@ 
 
-tests_unitaires_date.o: tests_untaires_date.c
+tests_unitaires_date.o: tests_unitaires_date.c date.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
 
 # Edition de lien
 
 tests_unitaires_date: tests_unitaires_date.o date.o
-	$(CC) $^ -o ^@
+	$(CC) $^ -o $@
 
 
 clean:
