--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-Wall -g
-EXEC=tests_unitaires_coordonnees
+EXEC=tests_unitaires_personne
 
 
 all: $(EXEC)
@@ -10,14 +10,20 @@ all: $(EXEC)
 
 date.o: date.c date.h
 	$(CC) $(CFLAGS) -c $< -o $@
-	
+
 coordonnees.o: coordonnees.c coordonnees.h
+	$(CC) $(CFLAGS) -c $< -o $@
+
+personne.o: personne.c personne.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
 tests_unitaires_date.o: tests_unitaires_date.c date.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
 tests_unitaires_coordonnees.o: tests_unitaires_coordonnees.c coordonnees.h
+	$(CC) $(CFLAGS) -c $< -o $@
+
+tests_unitaires_personne.o: tests_unitaires_personne.c personne.h date.h coordonnees.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
 
@@ -27,6 +33,9 @@ tests_unitaires_date: tests_unitaires_date.o date.o
 	$(CC) $^ -o $@
 
 tests_unitaires_coordonnees: tests_unitaires_coordonnees.o coordonnees.o
+	$(CC) $^ -o $@
+
+tests_unitaires_personne: tests_unitaires_personne.o personne.o date.o coordonnees.o
 	$(CC) $^ -o $@
 
 
